# sphinx-docc

./: .gitignore  DocCBridge  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
DocCBridge/: Makefile  Package.resolved  Package.swift  README.md
DocCBridge/Sources/DocCBridge/: DocCBridge.swift
src/docc_parser/: bridge.py  cli.py  converter.py  references.py  sphinx_ext.py
src/docc_parser.egg-info/: PKG-INFO  SOURCES.txt
src/sphinx_docc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
