[project]
name = "docc-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docutils>=0.22.4",
    "sphinx>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docc_parser"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/docc_parser",
]

[tool.hatch.build]
include = [
    "src/docc_parser/*.dylib",
    "src/docc_parser/*.so"
]
