[project]
name = "docc-parser"
version = "0.1.0"
description = "A Sphinx extension for parsing and integrating Apple DocC documentation."
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.12"
dependencies = [
    "docutils>=0.22.4",
    "sphinx>=9.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docc_parser"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
docc_parser = ["*.dylib", "*.so"]

[tool.cibuildwheel]
test-command = "python -c \"import docc_parser\""
